--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "bottender": "^1.3.3"
+    "bottender": "^1.3.3",
+    "random-item": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
