--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bottender": "^1.3.3",
+    "lodash": "^4.17.15",
     "random-item": "^3.0.0"
   },
   "devDependencies": {
